--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+main { width: 100%;}
 section {
-  width: 100vw;
+  width: 100%;
+}
+iframe {
+  width: 100%;
+}
+h1 {
+  color: rgb(5, 172, 72);
 }
